tests/NormalTests/paczka1/fuzzy1/82035479.err
Error in line 21: 8RnRxSmzeW S115 7,2
Error in line 24: 8RnRxSmzeW S637 69,9
Error in line 32: RX4tiI4b A24 78,H
Error in line 28: xut8G2b9QS S637 47,7
Error in line 27: 6ZfKhyWvbKY S115 99,1
Error in line 20: S115 S637 54,5
Error in line 38: S115 S355 24,5
